@@ -1,5 +1,6 @@
 - Fix bug related to "Disables Diseases From Flood Plains" tech flag
   - Option named patch_disease_stopping_tech_flag_bug, off by default b/c this fix causes a lot more disease under the standard rules
+- Display negative yields from generated resources
 - Fix free unit glitch from switching production to a building through the unit limit reached popup
 - Rebuild the trade network after loading save data for improvements beyond the limit
 - Fix yields from resource generating buildings not always appearing after a new scenario is loaded
